--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,30 @@
 {
-  "buildCommand": "npm run build",
-  "outputDirectory": "public/build",
-  "devCommand": "npm run dev"
+  "version": 2,
+  "builds": [
+    {
+      "src": "public/index.php",
+      "use": "@vercel/php",
+      "config": {
+        "includeFiles": [
+          "config/**",
+          "vendor/**",
+          "storage/**",
+          "app/**",
+          "bootstrap/**",
+          "database/**",
+          "resources/**",
+          "routes/**",
+          "artisan",
+          "composer.json",
+          "composer.lock"
+        ]
+      }
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "/public/index.php"
+    }
+  ]
 }
